Payment method ui changes

--- a/ECommerceWebApp/Views/OrderItems/Index.cshtml
+++ b/ECommerceWebApp/Views/OrderItems/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ECommerceWebApp.Models.Domain.OrderItems>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Order";
 }
 
 <!--========== ALERT STARTS ==========-->
