--- a/ECommerceWebApp/Views/Products/Delete.cshtml
+++ b/ECommerceWebApp/Views/Products/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerceWebApp.Models.Domain.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 <!--========== ALERT STARTS ==========-->
 <div id="shopify-section-1550734361962" class="shopify-section">
