--- a/ECommerceWebApp/Views/Shared/_Layout.cshtml
+++ b/ECommerceWebApp/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ECommerceApp</title>
+    <title>@ViewData["Title"]</title>
     <link href="~/css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="https://minim-demo.myshopify.com/cdn/shop/t/2/assets/favicon.png?v=29885537522503330011552104986" type="image/png" />
 
