--- a/ECommerceWebApp/Views/Users/Create.cshtml
+++ b/ECommerceWebApp/Views/Users/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerceWebApp.Models.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Register";
 }
 <!--========== ALERT STARTS ==========-->
 <div id="shopify-section-1550734361962" class="shopify-section">
