--- a/ECommerceWebApp/Views/Users/Edit.cshtml
+++ b/ECommerceWebApp/Views/Users/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerceWebApp.Models.Domain.User
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 <!--========== ALERT STARTS ==========-->
 <div id="shopify-section-1550734361962" class="shopify-section">
