--- a/ECommerceWebApp/Views/Users/Login.cshtml
+++ b/ECommerceWebApp/Views/Users/Login.cshtml
@@ -1,4 +1,7 @@
 ﻿@model ECommerceWebApp.Models.LoginViewModel
+@{
+    ViewData["Title"] = "Login";
+}
 <!--========== ALERT STARTS ==========-->
 <div id="shopify-section-1550734361962" class="shopify-section">
     <div data-section-id="1550734361962" data-section-type="slide-v1" style=" ">
