--- a/ECommerceWebApp/Views/Orders/Index.cshtml
+++ b/ECommerceWebApp/Views/Orders/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ECommerceWebApp.Models.Domain.Order>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Orders";
 }
 
 <!--========== ALERT STARTS ==========-->
