--- a/ECommerceWebApp/Views/Users/Index.cshtml
+++ b/ECommerceWebApp/Views/Users/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ECommerceWebApp.Models.Domain.User>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Users";
 }
 
 <!--========== ALERT STARTS ==========-->
